force-app/main/default/objects/Range__c/Range__c.object-meta.xml
<CustomObject>
    <customHelpPage>CustomSetup</customHelpPage>
    <description>Where the cattle graze</description>
    <label>Range</label>
    <nameField>
        <label>Range Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ranges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>