force-app/main/default/objects/Range__c/fields/Acres__c.field-meta.xml
<CustomField>
    <fullName>Acres__c</fullName>
    <label>Acres</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>