force-app/main/default/objects/Range__c/fields/Annual_Lease_Amount__c.field-meta.xml
<CustomField>
    <fullName>Annual_Lease_Amount__c</fullName>
    <label>Annual Lease Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>