force-app/main/default/objects/Range__c/fields/Lease_Begin__c.field-meta.xml
<CustomField>
    <fullName>Lease_Begin__c</fullName>
    <label>Lease Begin</label>
    <type>Date</type>
</CustomField>