force-app/main/default/objects/Range__c/fields/Lease_End__c.field-meta.xml
<CustomField>
    <fullName>Lease_End__c</fullName>
    <label>Lease End</label>
    <type>Date</type>
</CustomField>