force-app/main/default/objects/Range__c/fields/Lease_Type__c.field-meta.xml
<CustomField>
    <fullName>Lease_Type__c</fullName>
    <label>Lease Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>Private</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>