force-app/main/default/objects/Range__c/fields/Lessor__c.field-meta.xml
<CustomField>
    <fullName>Lessor__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Name of the Lessor of the range</inlineHelpText>
    <label>Lessor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Ranges</relationshipLabel>
    <relationshipName>Ranges</relationshipName>
    <type>Lookup</type>
</CustomField>