force-app/main/default/objects/Range__c/fields/Terrain_Description__c.field-meta.xml
<CustomField>
    <fullName>Terrain_Description__c</fullName>
    <inlineHelpText>Describe the terrain</inlineHelpText>
    <label>Terrain Description</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>