force-app/main/default/objects/Range__c/fields/Water_Source__c.field-meta.xml
<CustomField>
    <fullName>Water_Source__c</fullName>
    <label>Water Source</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Irrigated</fullName>
            </value>
            <value>
                <fullName>Lake</fullName>
            </value>
            <value>
                <fullName>Retention Pond</fullName>
            </value>
            <value>
                <fullName>Stream</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>