force-app/main/default/objects/Range__c/recordTypes/Leased_Range.recordType-meta.xml
<RecordType>
    <fullName>Leased_Range</fullName>
    <active>true</active>
    <description>Range land that is leased</description>
    <label>Leased Range</label>
</RecordType>