force-app/main/default/objects/Range__c/recordTypes/Owned_Range.recordType-meta.xml
<RecordType>
    <fullName>Owned_Range</fullName>
    <active>true</active>
    <description>Range land that&#39;s owned</description>
    <label>Owned Range</label>
</RecordType>