force-app/main/default/objects/Range__c/listViews/All_Owned_Ranges.listView-meta.xml
<ListView>
    <fullName>All_Owned_Ranges</fullName>
    <columns>NAME</columns>
    <columns>Acres__c</columns>
    <columns>Lease_Type__c</columns>
    <columns>Lease_Begin__c</columns>
    <columns>Lease_End__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Range__c.Owned_Range</value>
    </filters>
    <label>All Owned Ranges</label>
</ListView>