force-app/main/default/objects/Range__c/listViews/All_Ranges.listView-meta.xml
<ListView>
    <fullName>All_Ranges</fullName>
    <columns>NAME</columns>
    <columns>Acres__c</columns>
    <columns>Lease_Type__c</columns>
    <columns>Lease_Begin__c</columns>
    <columns>Lease_End__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Ranges</label>
</ListView>